--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -13,6 +13,7 @@
     "@types/react-datepicker": "^4.8.0",
     "axios": "^1.11.0",
     "dotenv": "^17.2.2",
+    "firebase": "^12.7.0",
     "framer-motion": "^12.23.25",
     "react": "^18.2.0",
     "react-datepicker": "^4.11.0",
